# tjjobs

./: .gitignore  Dockerfile  README.md  pyproject.toml
dagster/: dagster.yaml
scripts/: deploy.py  image.py
tjjobs/: __main__.py  workspace.yaml
