[tool.poetry]
name = "tjjobs"
version = "0.1.0"
description = "TJ's Scheduled Jobs"
authors = ["TJ Palanca <mail@tjpalanca.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^0.15.6"
dagit = "^0.15.6"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"
black = "^22.6.0"
ipython = "^8.4.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
